[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Environment/assets/layer_0_r.png" type="Texture" id=1]
[ext_resource path="res://Game/Environment/Background.gd" type="Script" id=2]
[ext_resource path="res://Game/Environment/assets/layer_1_l.png" type="Texture" id=3]
[ext_resource path="res://Game/Environment/assets/layer_1_r.png" type="Texture" id=4]
[ext_resource path="res://Game/Environment/assets/layer_0_l.png" type="Texture" id=5]
[ext_resource path="res://Game/Environment/ParallaxLayer.tscn" type="PackedScene" id=6]

[node name="Background" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxLayer" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 40 )
velocity_scroll = -50.0
texture_left = ExtResource( 5 )
texture_right = ExtResource( 1 )

[node name="ParallaxLayer2" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 348 )
texture_left = ExtResource( 3 )
texture_right = ExtResource( 4 )

[node name="ParallaxLayer3" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 602 )
velocity_scroll = -250.0
